--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ nav li{
     padding: 10px 25px;
     margin-right: 10px;
     background: #FD6E0A;
+    font-weight: 700;
+    font-size: 20px;
     border: none;
     border-radius: 5px;
     text-decoration: none;
@@ -74,6 +76,7 @@ main{
     font-weight: 700;
     font-size: 35px;
     margin-bottom: 30px;
+    text-align: center;
 }
 .section-discripsion{
     color: #757575;
@@ -92,4 +95,96 @@ main{
     font-weight: 700;
     font-size: 20px;
     color: #474747;
+}
+.What-I-D0{
+    margin: 130px 0px;
+}
+.What-I-D0 .section-discripsion{
+    text-align: center;
+    margin: 0px 80px;
+    padding-bottom: 50px;
+}
+/* Skills styles */
+.skills-container{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.skills-cart{
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px=
+    margin-right: 24px;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+}
+.skill-discription{
+    color: #757575;
+}
+
+
+/* resume stytles */
+.resume-container{
+    margin-top: 100px;
+    display: flex;
+}
+.edu-title{
+    font-weight: 700;
+    font-size: 30px;
+}
+.education-info{
+    margin: 30px 0;
+    border-bottom: 1px solid #D1D1D1;
+}
+.last-edu{
+    border: none;
+}
+.cart-defenaton{
+    margin-right: 25px; 
+}
+.degree-name{
+    font-weight: 700;
+    font-size: 25px;
+}
+.universiy-name{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+}
+.details{
+    color: #757575;
+}
+.resume-button{
+    text-align: center;
+    margin: 50px 0px 100px 0px;
+}
+.contact{
+    display: flex;
+    background: #FFF8F3;
+    padding: 100px 200px;
+}
+.icon-area img{
+margin-right: 15PX;
+}
+.contact h2{
+    text-align: left;
+}
+.message-area{
+    margin-left: 100px;
+}
+.message-area input{
+    height: 64px;
+    width: 461px;
+}
+.message-area textarea{
+    height: 180px;
+    width: 461px;
+}
+.message-area input , textarea{
+    margin-bottom: 24px;
+    border: 0;
+    border-radius: 5px;
+    padding: 10px;
 }
