--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ main{
 .skills-cart{
     box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
     border-radius: 5px;
-    padding: 30px=
+    padding: 30px;
     margin-right: 24px;
 }
 .skill-title{
